PR64295 cannot override default Virtualhost's mod_reqtimeout of course only body=n can work the headers have to parsed to get the virtualhost.

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1876540 13f79535-47bb-0310-9956-ffa450edef68